<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tencent.wetest.activity.FloatWinOpenActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/abc_action_bar_up_description"
        android:background="#4285f4"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/open_the_float_window"
        android:elevation="10dp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page"/>

    </LinearLayout>


    <ImageView
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/right_ctr"/>

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/open_float_window_right"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/float_window"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <android.support.v7.widget.AppCompatButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_float_window_btn"
            android:background="@drawable/selector_test_start_button"
            android:text="@string/open_the_float_window"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

    </LinearLayout>

</LinearLayout>
