<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:background="#f0f0f0">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/selector_center_button"
            android:id="@+id/app_select_layout"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/select_app_title"/>

            <TextView

                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="50dp"
                android:id="@+id/select_app_title"
                android:text="@string/select_app_tile"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"

                />

               <TextView

                    android:layout_width="fill_parent"
                    android:gravity="center_vertical|right"
                    android:layout_height="80dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/select_app_content"
                    android:id="@+id/appName"
                    />

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_test_start"
            android:background="@drawable/selector_test_start_button"
            android:text="@string/test_start"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/root_alert_layout"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/avail_para"
                android:text="@string/home_bottom_title"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:gravity="center_vertical"
                    android:text="@string/home_bottom_is_root"
                    android:drawablePadding="10dp"
                    android:id="@+id/isRoot"

                    />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_margin="6dp"
                    android:layout_height="15dp"
                    android:id="@+id/img_alert"
                    android:src="@drawable/alert"/>

        </LinearLayout>


        </LinearLayout>




    </LinearLayout>



</LinearLayout> <!-- </ScrollView> -->
