<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.tencent.wetest.activity.TestResultsActivity"
    android:orientation="vertical"
    android:id="@+id/test_results_Layout">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/abc_action_bar_up_description"
        android:background="#4285f4"
        android:elevation="10dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/test_result"
        />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_marginTop="50dp"
        android:fillViewport="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"

         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    >

                    <TextView

                        android:layout_width="90dp"
                        android:gravity="center"
                        android:layout_height="30dp"
                        android:text="@string/test_phone_manu_title"
                        android:layout_marginLeft="30dp"

                        />

                    <TextView

                        android:layout_width="fill_parent"
                        android:gravity="center_vertical|left"
                        android:layout_height="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/select_app_content"
                        android:id="@+id/test_phone_manu_content"
                        />


                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView

                    android:layout_width="90dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/test_time_title"
                    android:layout_marginLeft="30dp"

                    />

                <TextView

                    android:layout_width="fill_parent"
                    android:gravity="center_vertical|left"
                    android:layout_height="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/select_app_content"
                    android:id="@+id/test_time_content"
                    />


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <TextView

                    android:layout_width="90dp"
                    android:gravity="center"
                    android:layout_height="30dp"
                    android:text="@string/test_app_name_title"
                    android:layout_marginLeft="30dp"

                    />

                <TextView

                    android:layout_width="fill_parent"
                    android:gravity="center_vertical|left"
                    android:layout_height="30dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/select_app_content"
                    android:id="@+id/test_app_name_content"
                    />


            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

            </LinearLayout>


        </LinearLayout>




    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dataDetail"
            android:background="@drawable/selector_test_start_button"
            android:text="@string/show_data_detail"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">


        </LinearLayout>

        </LinearLayout>






    </LinearLayout>
